@@ -1,3 +1,9 @@
+2008-02-28  Jaroslav Hajek <highegg@gmail.com>
+
+	* corrf.f: added Matern-3/2 and Matern-5/2 correlation funcs
+	* get_corrf.c, forsubs.h: included the new correlation funcs
+	* gpr_train.cc: documentation for the new correlation funcs
+
 2008-02-24  Jaroslav Hajek <highegg@gmail.com>
 
 	* optdrv.f: implement objective reduction stopping criterion
